WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137931
Web Inspector: Fix generator importing of protocol type "any", treat as value
https://bugs.webkit.org/show_bug.cgi?id=137931
Summary
Web Inspector: Fix generator importing of protocol type "any", treat as value
Joseph Pecoraro
Reported
2014-10-21 12:40:43 PDT
The generator import of type "any" was using "getAny" which does not exist. Add the boilerplate for a "getValue". This is currently unused, otherwise we would have gotten compiler warnings. Arguably we could switch to disallow incoming "any" types, but it is supportable, so I just did a quick implementation.
Attachments
[PATCH] Proposed Fix
(7.10 KB, patch)
2014-10-21 12:42 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
[PATCH] Proposed Fix
(7.10 KB, patch)
2014-10-21 13:52 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2014-10-21 12:42:13 PDT
Created
attachment 240216
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 2
2014-10-21 12:44:51 PDT
This patch modifies the inspector protocol generator. Please ensure that you have rebaselined any generator test results (i.e., by running `Tools/Scripts/run-inspector-generator-tests --reset-results`)
Joseph Pecoraro
Comment 3
2014-10-21 13:52:02 PDT
Created
attachment 240221
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 4
2014-10-22 12:11:17 PDT
Comment on
attachment 240221
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 240221 Committed
r175059
: <
http://trac.webkit.org/changeset/175059
>
WebKit Commit Bot
Comment 5
2014-10-22 12:11:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug