Web Inspector: Fix generator importing of protocol type "any", treat as value https://bugs.webkit.org/show_bug.cgi?id=137931

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-10-22
Reviewed by Timothy Hatcher.

Treat incoming "any" objects as InspectorValues, which can be any type.
Add the necessary boilerplate to import.

* inspector/InspectorBackendDispatcher.cpp:
(Inspector::AsMethodBridges::asValue):
(Inspector::InspectorBackendDispatcher::getValue):
* inspector/InspectorBackendDispatcher.h:
* inspector/scripts/codegen/generator.py:
(Generator.keyed_get_method_for_type):
* inspector/scripts/tests/expected/commands-with-optional-call-return-parameters.json-result:

Canonical link: https://commits.webkit.org/155832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175059 268f45cc-cd09-0410-ab3c-d52691b4dbfc